--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@storybook/react-webpack5": "^8.3.5",
     "@storybook/test": "^8.3.5",
     "eslint-plugin-storybook": "^0.9.0",
+    "prettier": "^3.3.3",
     "prop-types": "^15.8.1",
     "storybook": "^8.3.5",
     "webpack": "^5.95.0"
